// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCard if there is no average rating or reviews alternate text should be displayed 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(225, 225, 225, 0.3)",
      "borderRadius": 20,
      "margin": 20,
      "marginTop": 15,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.3)",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "bold",
            "justifyContent": "space-between",
            "textAlign": "center",
          }
        }
      >
        TESTING TESTING
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "bold",
            "justifyContent": "space-between",
            "textAlign": "center",
          }
        }
      >
        <Text>
          No ratings yet
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <Text>
      Be the first to add a review
    </Text>
  </View>
</View>
`;

exports[`ReviewCard should match the snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(225, 225, 225, 0.3)",
      "borderRadius": 20,
      "margin": 20,
      "marginTop": 15,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.3)",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "bold",
            "justifyContent": "space-between",
            "textAlign": "center",
          }
        }
      >
        TESTING TESTING
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "bold",
            "justifyContent": "space-between",
            "textAlign": "center",
          }
        }
      >
        <Text>
          5
          /10 Avg.
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <View
      key="its ok1"
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.3)",
          "borderBottomWidth": 2,
          "borderRadius": 30,
          "marginBottom": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        7
        /10
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        its ok
      </Text>
    </View>
    <View
      key="lame2"
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.3)",
          "borderBottomWidth": 2,
          "borderRadius": 30,
          "marginBottom": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        4
        /10
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        lame
      </Text>
    </View>
    <View
      key="null3"
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.3)",
          "borderBottomWidth": 2,
          "borderRadius": 30,
          "marginBottom": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        4
        /10
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      key="This taco put my son in the hospital4"
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.3)",
          "borderBottomWidth": 2,
          "borderRadius": 30,
          "marginBottom": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        1
        /10
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        This taco put my son in the hospital
      </Text>
    </View>
    <View
      key="The best5"
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.3)",
          "borderBottomWidth": 2,
          "borderRadius": 30,
          "marginBottom": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        10
        /10
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        The best
      </Text>
    </View>
    <View
      key="meh6"
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(0, 0, 0, 0.3)",
          "borderBottomWidth": 2,
          "borderRadius": 30,
          "marginBottom": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        4
        /10
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        meh
      </Text>
    </View>
  </View>
</View>
`;
